--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,25 @@
 body{
     background-color: hsl(0, 0%, 88%);
     font-family: Arial, Helvetica, sans-serif;
+    max-width: 800px;
 }
-form div{
-    color: rgb(0, 0, 0)
+
+h1 {
+    text-align: center;
+}
+label.label-group {
+    display: inline-block;
+    width: 15em;
+    margin: 2% 1%;
+}
+.input-group, .input-group.inline {
+    margin: 10px 257px;
+}
+.input-group {
+    display: flex;
+    flex-direction: column;
+}
+.input-group.inline {
+    display: flex;
+    flex-direction: row;
 }
